--- a/crm_integration.services.yml
+++ b/crm_integration.services.yml
@@ -2,3 +2,6 @@ services:
   crm_integration.auth_service:
     class: Drupal\crm_integration\CRMIntegrationAuthService
     arguments: ['@http_client']
+  crm_integration.api_service:
+    class: Drupal\crm_integration\CRMIntegrationApiService
+    arguments: ['@database', '@http_client']
